--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1"
   }
 }
